[package]
name = "convert"
version = "0.1.0"
edition = "2024"

[dependencies]
mctc-parser = { git = "https://github.com/Etos2/mctc-rs.git", rev = "5a4bfec29076c5102ae289c37c835c08c897f791" }
mctc-canvas_base = { git = "https://github.com/Etos2/mctc-canvas_base-rs", rev = "0320aa2c534f7d388e2607d5e679162e3600383a" }
anyhow = "1.0.95"
chrono = "0.4.39"
